# Engeneering-calc

./: CMakeLists.txt  README.md  calculation.c  calculation.h  constants.h  examples.txt  linear_map.c  linear_map.h  main.c  pair_string_double.c  pair_string_double.h  pow_utilities.c  pow_utilities.h  rpn_creating.c  rpn_creating.h  rpn_utilities.c  rpn_utilities.h  stack_double.c  stack_double.h  stack_strings.c  stack_strings.h  test.c  test.h
